# autoscholar-desktop

./: .gitignore  build-tauri.sh
.github/workflows/: build.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tauri-dist/Core/: DbBinding.js  Publome.js  Publon.js  PublonBinding.js  PublonRegistry.js  PublonTable.js  UIBinding.js
tauri-dist/Services/: ServiceRegistry.js  accreditation.service.js  event.service.js  group.service.js  logicComposer.service.js  member.service.js  messages.service.js  tag.service.js
tauri-dist/Systems/AutoScholar/: autoscholar.config.js  autoscholar.theme.css  class.AccreditationAutomatePanel.js  class.AchievementsPanel.js  class.AdapterUtils.js  class.ApiDataAdapter.js  class.ApiSpecPanel.js  class.AsCommandPalette.js  class.AsEmptyState.js  class.AsToast.js  class.AttendanceDPPanel.js  class.AutoScholarAbout.js  class.AutoScholarApp.js  class.AutoScholarEntryFlow.js  class.AutoScholarErrors.js  class.AutoScholarHubApp.js  class.AutoScholarServicesPanel.js  class.AutoScholarUtils.js  class.BaseSelector.js  class.CareerHubPanel.js  class.CareerViews.js  class.ClassAnalyticsPanel.js  class.ClassRosterPanel.js  class.ClassViewConnect.js  class.ClassViewConnectApp.js  class.CohortComparePanel.js  class.CohortSelector.js  class.CohortTrackerPanel.js  class.CoursePickerPanel.js  class.CourseSelector.js  class.DataAdapter.js  class.DegreeProgressPanel.js  class.DepartmentSelector.js  (+44 more)
tauri-dist/UI/: class.ui.css  class.ui.js
(+74 files in other folders)
