[package]
name = "autoscholar"
version = "1.0.0"
description = "AutoScholar — Academic Management System"
authors = ["Publon.Press"]
edition = "2021"

[lib]
name = "autoscholar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
